Fixed UI issue on firefox

--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -118,12 +118,12 @@
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
                                                     <a href="/Myactivity">
-                                                        <span class="Icon Icon--my-activity Icon--large"></span><span class="text"><br />My Activity</span>
+                                                        <span class="Icon Icon--my-activity Icon--large" id="MyActivitySpan" style="margin-top: 11px;"></span><span class="text"><br />My Activity</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFeed" class="feed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" id="PatAnswerSpan" style="margin-top: 11px;"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFindDoc" class="find-doctors">
@@ -136,12 +136,12 @@
                                             {
                                                 <li id="liDocFeed">
                                                     <a href="/Doctor-Answers">
-                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" id="answerSpan"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liDocQuestions">
                                                     <a href="/Questions">
-                                                        <span class="Icon Icon--questions Icon--large"></span>
+                                                        <span class="Icon Icon--questions Icon--large" id="questionSpan"></span>
                                                         @if (Convert.ToInt32(@Session["UnQuestionCount"]) != 0)
                                                         {
                                                             <span id="unansweredQuestionCount" title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
@@ -154,22 +154,22 @@
                                             {
                                                 <li id="liAdminQuestions">
                                                     <a href="/admin">
-                                                        <span class="Icon Icon--questions Icon--large"></span><span class="text"><br />Questions</span>
+                                                        <span class="Icon Icon--questions Icon--large" id="adminQuestion" style="margin-top: 11px;"></span><span class="text"><br />Questions</span>
                                                     </a>
                                                 </li>
                                                 <li id="liAdminFeed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" id="adminAnswer" style="margin-top: 11px;"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageTags">
                                                     <a href="/Tags">
-                                                        <span class="Icon Icon--tags Icon--large"></span><span class="text"><br />Tags</span>
+                                                        <span class="Icon Icon--tags Icon--large" id="tags" style="margin-top: 11px;"></span><span class="text"><br />Tags</span>
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
                                                     <a href="/Report">
-                                                        <span class="Icon Icon--reports Icon--large"></span><span class="text"><br />Reports</span>
+                                                        <span class="Icon Icon--reports Icon--large" id="reports" style="margin-top: 11px;"></span><span class="text"><br />Reports</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageDoctor">
@@ -396,6 +396,32 @@
             }
             window.onorientationchange = reorient;
             window.setTimeout(reorient, 0);
+
+            navigator.sayswho = (function () {
+                var ua = navigator.userAgent, tem,
+                M = ua.match(/(opera|chrome|safari|firefox|msie|trident(?=\/))\/?\s*(\d+)/i) || [];
+                if (/trident/i.test(M[1])) {
+                    tem = /\brv[ :]+(\d+)/g.exec(ua) || [];
+                    return 'IE ' + (tem[1] || '');
+                }
+                if (M[1] === 'Chrome') {
+                    //$('#QuestionSpan').removeClass('menu_margin');
+                }
+                else if (M[1] === 'Firefox') {
+                    $('#reports').addClass('menu_margin');
+                    $('#tags').addClass('menu_margin');
+                    $('#adminAnswer').addClass('menu_margin');
+                    $('#adminQuestion').addClass('menu_margin');
+                    $('#MyActivitySpan').addClass('menu_margin');
+                    $('#PatAnswerSpan').addClass('menu_margin');
+                    $('#answerSpan').addClass('menu_margin');
+                    $('#questionSpan').addClass('menu_margin');
+                }
+                else if (M[1] === 'Trident') {
+                    alert('hello');
+                    $('#questionSpan').addClass('menu_margin');
+                }
+            })();
         });
         var tryNumber = 0;
         jQuery('input[type=submit]').click(function (event) {
