--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -52,25 +52,25 @@
                                            id="Doctorlist">
                                         <thead>
                                             <tr>
-                                                <th>
+                                                <th class="table-heading-color">
                                                     <b>Name</b>
                                                 </th>
-                                                <th>
+                                                <th class="table-heading-color">
                                                     <b>Registration Date</b>
                                                 </th>
-                                                <th>
+                                                <th class="table-heading-color">
                                                     <b>Email ID</b>
                                                 </th>
-                                                <th>
+                                                <th class="table-heading-color">
                                                     <b>Specialities</b>
                                                 </th>
-                                                <th>
+                                                <th class="table-heading-color">
                                                     <b>Mobile No.</b>
                                                 </th>
-                                                <th>
+                                                <th class="table-heading-color">
                                                     <b>Status</b>
                                                 </th>
-                                                <th class="edit_th_min_width">
+                                                <th class="edit_th_min_width table-heading-color">
                                                     <b>Edit </b>
                                                 </th>
                                             </tr>
