--- a/MiraiConsultMVC/Views/admin/Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/Report.cshtml
@@ -77,22 +77,22 @@
                             id="report-doctor-list" style="table-layout:fixed">
                         <thead>
                             <tr>
-                                <th style="width: 20%">
+                                <th style="width: 20%" class="table-heading-color">
                                     <b>Doctor</b>
                                 </th>
-                                <th>
+                                <th class="table-heading-color">
                                     <b>City</b>
                                 </th>
-                                <th>
+                                <th class="table-heading-color">
                                     <b>Location</b>
                                 </th>
-                                <th class="reporttablewidth" style="word-wrap: break-word; width: 15%;">
+                                <th class="reporttablewidth table-heading-color" style="word-wrap: break-word; width: 15%;">
                                     <b>Appointments booked</b>
                                 </th>
-                                <th class="reporttablewidth" style="word-wrap: break-word; width: 15%">
+                                <th class="reporttablewidth table-heading-color" style="word-wrap: break-word; width: 15%">
                                     <b>Appointments Clicked</b>
                                 </th>
-                                <th class="reporttablewidth" style="word-wrap:break-word">
+                                <th class="reporttablewidth table-heading-color" style="word-wrap:break-word">
                                     <b>Avg response time (hours)</b>
                                 </th>
                             </tr>
