--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -12,7 +12,7 @@
                         Do you have any health related questions?</p>
                     <p class="div-title-firsts div-padding">Ask a Doctor</p>
                     <p class="askQustion-css">
-                        or see <a href="/topics" class="a-askQuestion-color">answer by topic</a>
+                        or see <a href="/topics" class="a-askQuestion-color">answers by topic</a>
 
                 </div>
                 <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion" onkeyup="Count(this)"
