--- a/MiraiConsultMVC/Views/Home/topics.cshtml
+++ b/MiraiConsultMVC/Views/Home/topics.cshtml
@@ -20,7 +20,7 @@
     <div class="span12 main-outter-padding">
         <div class="row-fluid">
             <div class="span12 finddoc-title">
-                topics
+                Topics
             </div>
         </div>
         <div class="content_border find-Doc-gbColor divmargin_bottom" style="padding-left:20px;">
