Fixed IE 9:When doctor answers a question, it accepts more than 500 characters as answer text

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -249,7 +249,12 @@
                     return false;
                 }
             }
-            $("#txtAnswer").keypress(function () {
+            $("#txtAnswer").keypress(function (e) {
+                var lengthF = $(this).val();
+
+                if (lengthF.length > 499){
+                    e.preventDefault();
+                }
                 $("#lblErrortxtAnswer").html('');
             });
             (function (i, s, o, g, r, a, m) {
