On page reload, all checkbox are set as unchecked

--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -222,6 +222,9 @@
         });
     }
     $(document).ready(function () {
+        $('#ChkApproved').prop('checked', false);
+        $('#ChkRejected').prop('checked', false);
+        $('#ChkRejected').prop('checked', false);
         $(".navigation li.active").removeClass("active");
         $('#liManageDoctor').addClass("active");
         initDataTable();
