--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -224,7 +224,7 @@
     $(document).ready(function () {
         $('#ChkApproved').prop('checked', false);
         $('#ChkRejected').prop('checked', false);
-        $('#ChkRejected').prop('checked', false);
+        $('#ChkRegistered').prop('checked', false);
         $(".navigation li.active").removeClass("active");
         $('#liManageDoctor').addClass("active");
         initDataTable();
