Fixed issue of ManageDoctors.cshtml list not showing proper data of patient.

--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -29,7 +29,7 @@
                                     <b>Filter:</b>
                                 </div>
                                 <div class="span3">
-                                    <input id="ChkRegisteredhdn" value="1"  name="Registered" type="hidden" />
+                                    <input id="ChkRegisteredhdn" name="Registered" type="hidden" />
                                     <input id="ChkRegistered"  type="checkbox"  />
                                     <label class="checkbox chk_box_inline">Registered Doctors</label>
                                 </div>
