Fixed If Location dropdown has no values to populate,then blank list gets displayed and as user moves down this list keeps on increasing its size for ie9 or ie 10

--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -212,6 +212,8 @@
                                 .html(response[cnt]["name"]));
                         var Location = document.getElementById("hdnLoactionId").value;
                         if (Location) {
+                            $('#locality-select').empty();
+                            $('#locality-select').append('<option></option>');
                             $('#locality-select option[value=' + Location + ']').attr("selected", true);
                             btnSearchDoctor_Click();
                             document.getElementById("hdnLoactionId").value = null;
