--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -47,14 +47,16 @@
                             @{
                                 if (Session["UserId"] == null || Convert.ToString(Session["UserId"]) == "")
                                 {
-                                    if (HttpContext.Current.Request.Url.AbsoluteUri.Contains("PatientSignUp") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("DoctorSignUp") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("verifyemail") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("resetpassword")
-                                 || HttpContext.Current.Request.Url.AbsoluteUri.Contains("PatientQuestionDetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("finddoctor") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("ForgotPassword") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("similarQuestions")
-                                 || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Verifyemail") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("ResetPassword")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Signup-Patient") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Signup-Doctor")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("PrivacyPolicy")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("termsofuse") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Contact")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("HowWeWorks") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("HowWeWorks")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("forgotpassword") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Answers"))
+                                    if (HttpContext.Current.Request.Url.AbsoluteUri.Contains("patientsignup") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("doctorsignup") 
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("verifyemail") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("resetpassword")
+                                 || HttpContext.Current.Request.Url.AbsoluteUri.Contains("patientquestiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("finddoctor") 
+                                 || HttpContext.Current.Request.Url.AbsoluteUri.Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("similarQuestions")
+                                 || HttpContext.Current.Request.Url.AbsoluteUri.Contains("verifyemail") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("resetpassword")
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("Signup-Patient") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("signup-doctor")
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("privacypolicy")
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("termsofuse") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("contact")
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("howweworks") 
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("forgotpassword") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("answers"))
                                     {
                                         <div class="pull-right">
                                             <ul class="nav">
