Fixed email text box disappear when user enter valid email in login contact us and invite friend pages in ie10 and windows 8

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -3975,3 +3975,7 @@ table.cust-table {
         text-align: center !important;
         color: #EB665F !important;
     }
+
+.input-block-display {
+    display:block !important
+}
