--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -16,7 +16,7 @@
     @Html.ValidationSummary(true)
     {
         <div class="custom-central-div">
-            <div class="row-fluid">
+            <div class="row-fluid" style="margin-top:3%">
                 <div style="margin-top:5%">
                     <div class='row-fluid span7'>
                         <textarea cols="50" id="QuestionText" name="QuestionText" rows="2" onkeyup="Count(this)" maxlength="200" onkeypress="return isEnterPress(event, this);" class="input-block-level txtQuestion_maxwidth custom-green-container">@ViewBag.Question</textarea>
@@ -97,7 +97,7 @@
                                     }
 
                                     <div class='span11 middle-size-padding'>
-                                        @if (!string.IsNullOrEmpty( Model.ToList()[i].answers[0].AnswerImage))
+                                        @if (!string.IsNullOrEmpty(Model.ToList()[i].answers[0].AnswerImage))
                                         {
                                             <div class='span5 '>
                                                 <p class='ans_text'>@Model.ToList()[i].answers[0].AnswerText </p>
@@ -118,7 +118,7 @@
                                 </div>
                                 if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient) && Convert.ToBoolean(Model.ToList()[i].isdocconnectuser))
                                 {
-                                    var href =(Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"])+MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))+"&frmaskmirai=1").Trim();
+                                    var href = (Convert.ToString(ConfigurationSettings.AppSettings["DocConnectApptUrl"]) + MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId)) + "&frmaskmirai=1").Trim();
                                     <div class="span3 offset1 pull-left visible-phone">
                                         <a class='btn book_appt_button' href='href' target='_blank' onclick='bookaptclicked( "@MiraiConsultMVC.Utilities.Encrypt(Convert.ToString(Model.ToList()[i].UserId))")'>Book Appointment </a>
                                     </div>
