Fixed Question - displayed in one line if user doesnot give any space in between

--- a/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/_DoctorQuestionList.cshtml
@@ -35,7 +35,7 @@
                                 <img src="../Content/image/answer.png" class="icon_img icon_img_check" />
                             }
                         </div>
-                        <div class='custom-middle middle-size-padding question-padding' style='width:80%'>
+                        <div class='custom-middle middle-size-padding question-padding' style='width:80%; word-break:break-all'>
                             @*<a class='question_text' href='doctorquestiondetails.aspx?questionid=<%= question.QuestionId%>'>*@
                             <a class='question_text' href='../Questions/@(question.QuestionId)'>
                                 @question.QuestionText
