--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -191,7 +191,7 @@
         <script type="text/javascript">
             $(function () {
                 var refUrl = document.referrer;
-                if (refUrl.indexOf("questionlist.aspx") >= 0) {
+                if (refUrl.indexOf("Questions") >= 0) {
                     $(".navigation li.active").removeClass("active");
                     $('#liDocQuestions').addClass("active");
                 }
