Fixed Doctor can enter white spaces as the answer text:It should not be allowed

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -238,7 +238,8 @@
 
             function ValidateAllControl() {
                 var errormsg = "";
-                if ($("#txtAnswer").val() == "") {
+                var answerText = document.getElementById('txtAnswer').value.trim();
+                if (answerText.trim() == null || answerText.trim() == "") {
                     errormsg += "Please Enter Answer.";
                     $("#lblErrortxtAnswer").html("Please Enter Answer.");
                 }
