--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -1070,7 +1070,7 @@
                 contentType: "application/json; charset=utf-8",
                 success: function (returndata) {
                     if (returndata == 0) {
-                        alert('Qualification details has been saved successfully.');
+                        //alert('Qualification details has been saved successfully.');
                         //saveRow(oTable, nEditing);
                         //nEditing = null;
                     }
