High-lighter is working for superadmin

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -641,7 +641,7 @@
             $(".navigation li.active").removeClass("active");
             $('#liManageDoctor').addClass("active");
         }
-        else if (refUrl.indexOf("DoctorProfile") >= 0) {
+        else if (refUrl.indexOf("") >= 0) {
             $(".navigation li.active").removeClass("active");
             $('#liManageDoctor').addClass("active");
         }
